# android-vncserver

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/a2k/vncserver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  buffermanager.cpp  buffermanager.h  log.h  native-lib.cpp  vncgraphicbuffer.cpp  vncgraphicbuffer.h  vncjni.cpp  vncserver.cpp  vncserver.h
app/src/main/cpp/libjpeg-turbo/: Android.bp  METADATA  README.android
app/src/main/cpp/libvncserver/rfb/: rfbconfig.h
app/src/main/java/com/a2k/vncserver/: MainActivity.java  SettingsActivity.java  TextureRender.java  VncJni.java  VncProjectionService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: settings_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/a2k/vncserver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
